enhance: appointmetn cache